# ClaudeOBIM

./: .gitmodules  CMakeLists.txt  README.md
include/: gl_context.hpp  shader.hpp  texture.hpp
src/: gl_context.cpp  main.cpp  shader.cpp  texture.cpp
